--- a/src/package.json
+++ b/src/package.json
@@ -10,13 +10,19 @@
     "format": "prettier --write ./src/**/*.{ts,tsx} ; eslint --fix ./src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "pg": "^8.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
