--- a/src/package.json
+++ b/src/package.json
@@ -7,15 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./src/**/*.{ts,tsx} ; eslint --fix ./src/**/*.{ts,tsx}"
+    "format": "prettier --write ./src/**/*.{ts,tsx} ; eslint --fix ./src/**/*.{ts,tsx}",
+    "add": "npx shadcn@latest add"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "pg": "^8.13.0",
