--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ./src/**/*.{ts,tsx} ; eslint --fix ./src/**/*.{ts,tsx}",
-    "add": "npx shadcn@latest add"
+    "add": "npx shadcn@latest add",
+    "db:generate": "npx drizzle-kit generate --config drizzle.config.ts",
+    "db:push": "npx drizzle-kit push --config drizzle.config.ts"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -24,6 +26,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "pg": "^8.13.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
